# eventuals_example

./: .bazeliskrc  .bazelrc  .clang-format  .clangd  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  main.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
